--- a/css/App.scss
+++ b/css/App.scss
@@ -3,7 +3,8 @@
     padding: 0;
     box-sizing: content-box;
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-
+    font-size: .8vw;
+    color: white;
 }
 
 .App{
@@ -16,20 +17,24 @@
     
    .section_userDates{
     align-items: center;
-    background-color: rgb(255, 255, 255);
+    background-color:rgb(33, 37, 41);
+    
     display: flex;
     flex-direction: column;
-    height: 60vw;
+    height: 100vh;
     justify-content: center;
-    width: 70vw;
+    width: 60vw;
     border-radius: 1vw;
     margin-top: 30px;
+    margin-bottom: 30px;
+
     
 
     label{
         box-sizing: border-box;
-        margin-bottom: 10px;
-        background-color: white;
+        padding-bottom: 10px;
+        
+        
     }
     
     .button_institution{
@@ -58,18 +63,18 @@
     .button_sendForms{
         display: flex;
         justify-content: center;
-        background-color: white;
         width: 25vw;
         box-sizing: border-box;
         button{
-            width: 15vw;
+            width: 13vw;
             height: 3vw;
             border-style: none;
-            background-color: rgb(255, 108, 108);
-            border-radius: 0.8vw;
+            background-color: rgb(108, 255, 145);
+            border-radius: 2vw;
+            color: black;
         }   
         button:hover{
-            background-color: rgb(235, 50, 50);
+            background-color: rgb(74, 197, 104);
             transition-duration: 0.4s;
         }
     }
@@ -77,23 +82,16 @@
         display: flex;
         flex-direction: column;
         justify-content: flex-start;
-        background-color: rgb(255, 255, 255);
-        
         width: 50vw;
-        label{
-            background-color: white;
-        }
+        
         .SelectInstitute{
-            background-color: white;
-            border-radius: 0.6vw;
+            background-color:rgb(33, 37, 41);            border-radius: 0.6vw;
             padding: 5px;
             box-sizing: border-box;
             margin-bottom: 20px;
+            color: rgb(255, 255, 255);
+
         }
-
-       
-
-       
     }
 
     .eventInput{
@@ -101,19 +99,17 @@
         fieldset{
             display: flex;
             flex-direction: column;
-            background-color: rgb(255, 255, 255);
             border-style: none;
-            
-
+        
             input{
-                background-color: white;
-                border-width: 0.5px;
-                height: 30px;
-                border-radius: 0.5vw;
-                box-sizing: border-box;
+                width: 50vw;
+                background-color:rgb(33, 37, 41);                border-width: 0.5px;
+                border-radius: 1vw;
                 margin-bottom: 20px;
-                padding: 14px 20px;
-
+                padding: 6px 20px;
+                color: rgb(255, 255, 255);
+                border-color: white;
+                border-style: solid;
             }
 
         }
@@ -131,52 +127,23 @@
     height: 60vw;
     display: flex;
     flex-direction: column;
-    background-color: rgb(255, 255, 255);
+    background-color:rgb(33, 37, 41);
     border-radius: 0.5vw;
-    align-items: center;
     margin-top: 30px;
+    margin-bottom: 30px;
    
 
-    .namesOfDates{
-        margin-top: 60px;
-        tr{
+ 
+     
+    table{
+        tr{            
             td{
-               
-                text-align:left;
-                background-color: rgb(255, 201, 119);
-                padding: 10px 63px;
-                border: 1px solid rgb(255, 255, 255);
-                
-            }
-
-        }
-        
-    }
-
-    
-    .container{
-        
-        tr{
-            
-            td{
-               
-
-                border: 1px solid rgb(255, 255, 255);
-                text-align:left;
-                padding: 20px 60px;
-                background-color: whitesmoke;
                 img{
                     
                     width: 1.5vw;
                 }
-               
-               
             }
-          
         }
-        
-       
-       
     }
     
     
@@ -191,8 +158,9 @@
     width: 100%;
     .nav-item{
         padding-right: 30px;
+        
         a{
-            font-size: 1.5vw;;
+            font-size: 1vw;;
         }
     }
 
